# akasha-prospector

./: README.md  pyproject.toml  repo-manifest.yaml
akasha_prospector/: __init__.py
akasha_prospector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
akasha_prospector/analysis/: __init__.py  directives.py
akasha_prospector/cli/: main.py
docs/: ARCHITECTURE.md  PHILOSOPHY.md
examples/: bursts.json  summary.json
tests/: test_directives_smoke.py
