[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha-prospector"
version = "0.1.0"
description = "Akasha directive and hypothesis engine"
requires-python = ">=3.10"

[project.scripts]
akasha-prospector = "akasha_prospector.cli.main:main"
